--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,3 +365,93 @@ body {
 .varbar-link:is(:hover, :focus) {
     color: var(--indian-yellow);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.hero {
+    --section-padding: 100px;
+    padding-block-start: calc(var(--section-padding) + 40px);
+    background-position: left;
+}
+.hero::before {
+    inset: 0;
+    background-color: var(--rich-black-forga-39_50);
+    mix-blend-mode: multiply;
+    z-index: -1;
+}
+.hero-text {
+    color: var(--white);
+    margin-block: 15px 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+.service {
+    text-align: center;
+}
+.service .section-text {
+    margin-block: 15px 55px;
+}
+.service-card{
+    background-color: var(--white);
+    padding: 60px 25px;
+    box-shadow: var(--shadow-1);
+    border-radius: var(--raduis-8);
+}
+
+.service-card .card-icon {
+    color: var(--indian-yellow);
+    font-size: 70px;
+    line-height: 1;
+}
+
+.service-card .card-icon img {
+    line-height: 1;
+}
+
+.service-card .card-title {
+    margin-block: 15px 12px;
+    transition: var(--transition-1);
+    color: var(--indian-yellow);
+}
+
+.service-card .card-title:is(:hover, :focus) {
+    color: var(--indian-yellow);
+}
+.service-card .card-text {
+    margin-block-end: 30px;
+}
+.service-card .card-btn {
+    color: var(--indian-yellow);
+    background-color: var(--white);
+    max-width: max-content;
+    margin-inline: auto;
+    font-size: 20px;
+    box-shadow: var(--shadow-2);
+    border-radius: var(--raduis-5);
+    transition: var(--transition-2);
+}
+
+.service-card:is(:hover, :focus-within) .card-btn {
+    background-color: var(--indian-yellow);
+    color: white;
+}
