--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@
     --transition-1: 0.25s ease;
     --transition-2: 0.5s ease;
     --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96)
+ 
 
 }
 
@@ -54,6 +55,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
 }
 
 li{
@@ -108,7 +110,7 @@ address{
 }
 
 html{
-    font-family: var(--ff-rubik);
+    font-family: 'League Spartan', sans-serif;
     font-size: 10px;
     scroll-behavior: smooth;
 }
@@ -158,7 +160,6 @@ body {
 .h1,
 .h2,
 .h3 {
-    font-family: var(--ff-oswald);
     line-height: 1.3;
 }
 .h1,
@@ -173,6 +174,7 @@ body {
 
 .h1{
     color: var(--white);
+    font-size: var(--fs-40);
 }
 
 .h2,
@@ -181,6 +183,7 @@ body {
 }
 .h2{
     font-size: var(--fs-30);
+    text-align: center;
 }
 .h3{
     font-size: var(--fs-24);
@@ -201,15 +204,17 @@ body {
     border-radius: var(--raduis-5);
     overflow: hidden;
 }
-.btm::before {
+
+.btn::before {
     background-color: var(--eerie-black-1);
     inset: 0;
     z-index: -1;
-    transform: skewY(-15deg) scaleY(0);
-    transition: var(--transition-2);
 }
 
-.btn:is(hover, :focus)::before { transform: skewY(-15deg) scaleY(2.5);}
+
+.btn:hover ion-icon {
+    transform: translateX(10px);
+}
 
 .text-center {
     text-align: center;
@@ -291,7 +296,7 @@ body {
 }
 
 .logo{
-    columns: var(--indian-yellow);
+    color: var(--indian-yellow);
     font-family: var(--ff-oswald);
     font-size: 2.7rem;
     font-weight: var(--fw-600);
@@ -325,7 +330,7 @@ body {
     transition: 0.15s var(--cubic-out);
 }
 
-.navbar .active{
+.navbar.active{
     max-height: 321px;
     transition-duration: 0.5s;
 }
@@ -362,7 +367,7 @@ body {
     transition: var(--transition-1);
 }
 
-.varbar-link:is(:hover, :focus) {
+.navbar-link:is(:hover, :focus) {
     color: var(--indian-yellow);
 }
 
@@ -380,10 +385,10 @@ body {
 
 
 .hero {
-    --section-padding: 100px;
-    padding-block-start: calc(var(--section-padding) + 40px);
+    padding-left: 50px;
     background-position: left;
 }
+
 .hero::before {
     inset: 0;
     background-color: var(--rich-black-forga-39_50);
@@ -419,13 +424,15 @@ body {
 }
 
 .service-card .card-icon {
-    color: var(--indian-yellow);
-    font-size: 70px;
-    line-height: 1;
+    width: 60px;
+    height: 60px;
+    border: 1px solid var(--indian-yellow);
+    padding: 1em;
+    margin-inline: auto;
+    border-radius: 50%;
 }
-
 .service-card .card-icon img {
-    line-height: 1;
+    line-height: 10;
 }
 
 .service-card .card-title {
@@ -454,4 +461,964 @@ body {
 .service-card:is(:hover, :focus-within) .card-btn {
     background-color: var(--indian-yellow);
     color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+ .pricing::before {
+    inset: 0;
+    background-color: var(--eerie-black-2_85);
+    mix-blend-mode: multiply;
+    z-index: 1;
+}
+
+.pricing .section-title {
+    color: var(--white);
+}
+
+.pricing .section-text {
+    margin-block: 15px 55px;
+    color: var(--white);
+}
+
+.pricing-tab-container {
+    background-color: var(--white);
+    padding: 40px 5px;
+}
+
+.tab-filter {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 3px;
+    margin-block-end: 30px;
+}
+
+.filter-btn {
+    color: var(--eerie-black-1);
+    font-family: var(--ff-oswald);
+    font-size: var(--fs-14);
+    font-weight: var(--fw-600);
+    text-transform: uppercase;
+    min-width: 130px;
+    padding-block: 12px;
+    border: 1px solid var(--platinum);
+    transition: var(--transition-1);
+    margin: 12px;
+}
+.filter-btn .btn-icon {
+    display: none;
+}
+
+.filter-btn .btn-icon img{
+    margin-inline: auto;
+}
+
+
+.filter-btn.active {
+    background-color: var(--indian-yellow);
+    border-color: var(--indian-yellow);
+    color: var(--white);
+}
+
+.pricing .grid-list {
+    padding-inline: 20px;
+}
+.pricing .grid-list > li.active {
+    animation: popup 0.75s ease forwards;
+}
+@keyframes popup {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+.pricing-card {
+    background-color: var(--indian-yellow_10);
+    padding: 20px 25px;
+    border-radius: var(--raduis-5);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.pricing-card .card-banner {
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.pricing-card .wrapper {
+    order: 1;
+}
+
+.pricing-card .h3{
+    --fs-24: 2rem;
+    margin-block-end: 8px;
+}
+.pricing .card-price {
+    color: var(--indian-yellow);
+    font-family: var(--ff-oswald);
+    font-size: var(--fs-30);
+    font-weight: var(--fw-500);
+}
+
+
+
+
+
+
+.title-wrapper {
+    margin-block-end: 60px;
+}
+
+.gallery .section-text {
+    margin-block: 12px 15px;
+}
+.gallery-card {
+    position: relative;
+}
+.gallery-card .card-banner .img-cover {
+    transition: var(--transition-2);
+}
+
+.gallery-card:is(:hover, :focus-within) .card-banner .img-cover {
+    transform: scale(1.1);
+}
+.gallery-card .card-content{
+    position: absolute;
+    bottom: 0;
+    inset: 15px;
+    background-color: var(--eerie-black-2_85);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    opacity: 0;
+    transform: scale(0.8);
+    transition: var(--transition-2);
+}
+
+.gallery-card:is(:hover, :focus-within) .card-content {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.gallery-card :is(.card-title, .card-text) {
+    color: var(--white);
+}
+
+.gallery-card .card-btn {
+    background-color: var(--white);
+    color: var(--indian-yellow);
+    font-size: 28px;
+    padding: 16px;
+    border-radius: var(--raduis-5);
+    margin-block-start: 12px;
+    transition: var(--transition-1);
+}
+
+.gallery-card .card-btn:is(:hover, :focus) {
+    background-color: var(--indian-yellow);
+    color: var(--white);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.appoin {
+    padding-block-start: 0;
+}
+
+.appoin-card .card-banner {
+    display: none;
+}
+
+.appoin-card .card-content {
+    background-color: var(--indian-yellow);
+    padding: 80px 15px;
+    text-align: center;
+    color: var(--white);
+}
+
+.appoin-card .section-title {
+    color: var(--white);
+}
+
+.appoin-card .section-text {
+    margin-block: 15px 55px;
+}
+
+.input-field {
+    background-color: var(--white);
+    color: var(--davys-gray);
+    min-height: 56px;
+    padding-inline: 25px;
+    border-radius: var(--raduis-5);
+    margin-block-end: 20px;
+    outline: none;
+    outline-offset: 0;
+}
+
+.input-field:focus {
+    outline: 3px solid var(--black_30);
+}
+
+select.input-field,
+.input-field::placeholder,
+.input-field.date {
+    font-family: var(--ff-oswald);
+    color: var(--eerie-black-1);
+    font-weight: var(--fw-500);
+}
+
+.input-field > option {
+    color: var(--sonic-silver);
+    font-family: var(--ff-rubik);
+}
+
+.input-field::-webkit-calender-picker-indicator {
+    opacity: 0.85;
+}
+
+textarea.input-field {
+    padding-block: 15px;
+    min-height: 100px;
+    height: 120px;
+    max-height: 150px;
+    resize: vertical;
+}
+
+.form-btn {
+    color: var(--white);
+    font-family: var(--ff-oswald);
+    font-size: var(--fs-14);
+    text-transform: uppercase;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid var(--white);
+    padding: 13px;
+    border-radius: var(--raduis-5);
+    transition: var(--transition-1);
+}
+
+.form-btn:is(:hover, :focus) {
+    background-color: var(--white);
+    color: var(--eerie-black-1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer {
+    background-color: var(--eerie-black-2);
+    padding-block-end: 30px;
+}
+
+.footer-top {
+    margin-block-end: 65px;
+}
+
+.footer .logo {
+    text-align: center;
+    padding: 25px;
+}
+
+.footer .input-wrapper {
+    background-color: var(--white);
+    position: relative;
+    margin: 25px;
+    padding: 15px;
+}
+
+.footer .input-wrapper:focus-within {
+    outline: 3px solid var(--white_30);
+}
+
+.footer .email-field {
+    text-align: center;
+    margin-block-end: 15px;
+    color: inherit;
+    outline: none;
+}
+
+.footer .btn{
+    max-width: 100%;
+    width: 100%;
+    justify-content: center;
+}
+
+.footer-link-box {
+    display: grid;
+    gap: 50px;
+}
+
+.footer-list-title {
+    color: var(--white);
+    font-family: var(--ff-oswald);
+    font-size: var(--fs-18);
+    font-weight: var(--fw-600);
+    text-transform: uppercase;
+    margin-block-end: 30px;
+}
+
+.footer-link::before {
+    position: static;
+    padding: 2.5px;
+    background-color: var(--white_30);
+    display: block;
+    border-radius: 50%;
+    transition: var(--transition-1);
+}
+
+.footer-link,
+.blog-card,
+.blog-card .card-date,
+.footer-list-item {
+    display: flex;
+    align-items: center;
+}
+
+.footer-link {
+    color: var(--white_50);
+    gap: 10px;
+    margin-block-start: 8px;
+    transition: var(--transition-1);
+}
+
+.footer-link:is(:hover, :focus) {
+    color: var(--white)
+}
+.footer-link:is(:hover, :focus)::before {
+    background-color: var(--white);
+}
+.blog-card {
+    gap: 25px;
+    margin-block-start: 20px;
+}
+
+.blog-card .card-banner {
+    flex-shrink: 0;
+}
+
+.blog-card .card-title {
+    color: var(--white);
+    font-family: var(--ff-oswald);
+    font-size: var(--fs-14);
+    font-weight: var(--fw-500);
+    line-height: 1.5;
+    margin-block-end: 5px;
+    transition: var(--transition-1);
+}
+
+.blog-card .card-title:is(:hover, :focus) {
+    color: var(--indian-yellow);
+}
+
+.blog-card .card-date {
+    gap: 5px;
+    font-size: var(--fs-13);
+    text-transform: uppercase;
+    color: var(--white_50);
+}
+
+.blog-card .card-date ion-icon {
+    --ionicon-stroke-width: 50px;
+}
+
+.footer-list-item {
+    align-items: flex-start;
+    gap: 10px;
+    margin-block-start: 10px;
+}
+.footer-list-item ion-icon {
+    color: var(--indian-yellow);
+    font-size: 18px;
+    flex-shrink: 0;
+    --ionicon-stroke-width: 50px;
+    margin-block: 7px;
+}
+
+.contact-link {
+    color: var(--white_50);
+    transition: var(--transition-1);
+}
+a.contact-lin:is(:hover, :focus) {
+    color: var(--white);
+}
+
+.footer-bottom {
+    background-color: var(--eerie-black-1);
+    text-align: center;
+    padding: 15px;
+}
+
+.copyright-link {
+    display: inline-block;
+    color: var(--indian-yellow);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.back-top-btn {
+    position: fixed;
+    bottom: 10px;
+    right: 20px;
+    background-color: var(--harvest-gold);
+    color: var(--white);
+    font-size: 20px;
+    padding: 10px;
+    border-radius: var(--raduis-5);
+    transition: var(--transition-1);
+}
+
+.back-top-btn.active {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(-10px);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 575px) {
+    :root{
+        --fs-40: 6rem
+    }
+
+    .container,
+    .header-top {
+        max-width: 540px;
+        width: 100%;
+       margin-inline: auto;
+    }
+
+    .btn {
+        padding: 13px 40px;
+    }
+    .h2 {
+        --fs-30: 3.5rem;
+    }
+
+    .header-top {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        max-width: 600px;
+        z-index: 4;
+        background-color: var(--white);
+        border-radius: 0 0 20px 20px;
+    }
+
+    .header-top-item:first-child {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .header-top-item ion-icon {
+        font-size: 18px;
+        color: var(--indian-yellow);
+        --ionicon-stroke-width: 50px;
+    }
+
+    .header-top-item .item-title {
+        color: var(--eerie-black-1);
+        font-weight: var(--fw-500);
+    }
+
+    .header-top-item .item-link {
+        transition: var(--transition-1);
+    }
+
+    .header-top-item .item-link:is(:hover, :focus) {
+        color: var(--indian-yellow);
+    }
+
+    .header-top-list {
+        justify-content: space-between;
+    }
+    .logo {
+        font-size: 3rem;
+    }
+    .logo .span {
+        font-size: 1.4rem;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .hero {
+        padding-block-start: calc(var(--section-padding) + 80px);
+    }
+    .hero-text {
+        font-size: var(--fs-18);
+    }
+
+
+
+
+
+
+
+    .filter-btn .btn-icon {
+        display: block;
+        font-size: 55px;
+        line-height: 1;
+        margin-block-end: 5px;
+    }
+
+    .pricing-card {
+        flex-wrap: nowrap;
+        align-items: center;
+        gap: 30px;
+    }
+    .pricing-card .wrapper {
+        order: 0;
+    }
+
+    .pricing-card .card-price {
+        align-self: flex-start;
+        line-height: 1.6;
+    }
+
+
+
+    .gallery .grid-list {
+        grid-template-columns: 1fr 1fr;
+    }
+
+
+
+
+
+    .appoin-card .card-content {
+        padding-inline: 50px;
+    }
+
+
+
+
+
+    .footer .email-field {
+        margin-block-end: 0;
+        text-align: left;
+        font-size: var(--fs-18);
+        padding: 10px 15px;
+        padding-inline-end: 210px;
+    }
+
+    .footer .btn {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        bottom: 15px;
+        width: max-content;
+    }
+
+    .footer-link-box {
+        grid-template-columns: 1fr 1fr;
+    }
+    .footer-list:is(:nth-child(3), :nth-child(4)) {
+        grid-column: 1 / 3;
+    }
+    .blog-card .card-title {
+        --fs-14: 1.7rem;
+        max-width: 25ch;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 768px) {
+    :root {
+        --fs-40: 8rem;
+    }
+
+    .container {
+        max-width: 720px;
+    }
+    .h2 {
+        --fs-30: 4rem;
+    }
+    .section-text {
+        max-width: 50ch;
+        margin-inline: auto;
+    }
+
+
+
+
+
+
+
+
+    .header-top {
+        max-width: 780px;
+    }
+
+
+
+
+
+
+
+    .service .grid-list {
+        grid-template-columns: 1fr 1fr;
+    }
+
+
+
+
+
+    .pricing-tab-container {
+        padding: 40px;
+    }
+    .pricing-card .wrapper {
+        margin-inline-end: auto;
+    }
+
+    
+
+
+    .gallery .section-text {
+        margin-inline: 0;
+    }
+    .gallery-card .card-content {
+        inset: 30px;
+    }
+
+
+
+    .appoin-card .card-banner {
+        display: block;
+    }
+    .appoin-card {
+        display: flex;
+    }
+
+
+
+    .footer-list:is(:nth-child(3), :nth-child(4)) {
+        grid-column: auto;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 992px) {
+    :root {
+        --fs-40: 10rem;
+    }
+
+    .container {
+        max-width: 960px;
+    }
+
+
+
+    .nav-toggle-btn {
+        display: none;
+    }
+    .header-top {
+        max-width: 1020px;
+    }
+    .header-bottom {
+        padding-block: 20px;
+    }
+
+
+    .navbar,
+    .navbar-list,
+    .navbar-item {
+        all: unset;
+    }
+
+    .navbar-list,
+    .header .btn {
+        display: flex;
+    }
+
+    .navbar-link {
+        padding-inline: 10px;
+    }
+
+
+
+
+    .hero {
+        --section-padding: 150px;
+        padding-block-start: calc(var(--section-padding) + 100px);
+    }
+
+    .hero-title,
+    .hero-text{
+        max-width: 600px;
+    }
+
+
+
+.service .grid-list {
+    grid-template-columns: repeat(3, 1fr);
+}
+      
+
+
+.pricing .grid-list {
+    grid-template-columns: 1fr 1fr;
+}
+
+.pricing-card {
+    height: 100%;
+}
+
+.pricing-card .card-banner {
+    flex-shrink: 0;
+}
+
+
+
+
+
+
+.gallery .title-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+
+
+
+.appoin-card .input-wrapper {
+    display: flex;
+    gap: 20px;
+}
+
+
+
+
+
+.footer-brand {
+    display: flex;
+    align-items: center;
+}
+.footer .logo {
+    padding: 60px 70px;
+    border-block-end: none;
+    border-inline-end: 1px solid var(--white-10);
+}
+
+.footer .input-wrapper {
+    flex-grow: 1;
+    margin-inline: 70px;
+}
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 1200px) {
+    :root {
+        --fs-40: 11rem;
+        --section-padding: 120px;
+    }
+
+    .container {
+        max-width: 1200px;
+    }
+
+    .header-top {
+        max-width: 1260px;
+    }
+    .header-top-list {
+        gap: 30px;
+    }
+    .header-top-item {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .header-top-item:nth-child(2) {
+        margin-inline-end: auto;
+    }
+
+
+
+
+
+    .hero {
+        background-position: left;
+        padding-block-end: 200px;
+    }
+    .hero-title, 
+    .hero-text {
+        max-width: 680px;
+    }
+
+    .filter-btn {
+        min-width: 178px;
+    }
+
+
+    .gallery .grid-list {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .appoin-card .card-content {
+        flex-grow: 1;
+    }
+    
+
+    .footer-link-box {
+        grid-template-columns: 0.5fr 0.5fr 1fr 0.8fr;
+    }
+
+    .back-to-btn {
+        padding: 15px;
+    }
 }
