--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -948,7 +948,24 @@ a.contact-lin:is(:hover, :focus) {
     transform: translateY(-10px);
 }
 
+.float{
+	position:fixed;
+	width:50px;
+	height:50px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+    border-radius: 50%;
+	color:#FFF;
+    font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
 
+.float ion-icon{
+    margin: 0 auto;
+    margin-top: 0.35em;
+}
 
 
 
